--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,117 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.hero-shot {
+  display:block;
+  background: rgba(6,164,235,0.5);
+  background-image: url(//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/time-ex/f4ab583f-portrait-2054725-1920.jpg);
+  background-repeat:no-repeat;
+  background-position:center center;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size:cover;
+  -ms-behavior:url(//d9hhrg4mnvzow.cloudfront.net/backgroundsize.min.htc);
+  behavior:url(//d9hhrg4mnvzow.cloudfront.net/backgroundsize.min.htc);
+  border-style:none none none none;
+  border-width:undefinedpx;
+  border-color:none;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:0px;
+  border-radius:0px;
+  width:100%;
+  height:450px;
+  position:relative;
+}
+
+.hero-shot-color-overlay {
+  position:absolute;
+  background:rgba(6,164,235,0.7);
+  -pie-background:rgba(6,164,235,0.7);
+  behavior:url(/PIE.htc);
+  height:450px;
+  width:100%;
+}
+
+.img-value {
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 70%;
+    opacity: 0.7;
+}
+
+.img-value:hover {
+    border-color: #f1f1f1;
+}
+
+.value-margin {
+  margin-bottom: 50px !important;
+  margin-right: 50px !important;
+  margin-left: 50px !important;
+}
+
+.img-product {
+    border: 10px solid transparent;
+    width: 80%;
+    opacity: 0.9;
+}
+
+.user {
+    border: 5px solid;
+    border-color: #f1f1f1;
+    width: 100px;
+    height: 100px;
+    opacity: 0.7;
+
+}
+
+#lp-pom-text-137 {
+  display:block;
+  background:rgba(255,255,255,0);
+  -pie-background:rgba(255,255,255,0);
+  border-style:none;
+  behavior:url(/PIE.htc);
+  border-radius:0px;
+  left:101px;
+  top:1506px;
+  z-index:45;
+  width:123px;
+  height:22px;
+  position:absolute;
+}
+
+
+.action-bar {
+  display:block;
+  background: rgba(6,164,235,0.5);
+  background-image: url(//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/time-ex/f4ab583f-portrait-2054725-1920.jpg);
+  background-repeat:no-repeat;
+  background-position:center center;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size:cover;
+  -ms-behavior:url(//d9hhrg4mnvzow.cloudfront.net/backgroundsize.min.htc);
+  behavior:url(//d9hhrg4mnvzow.cloudfront.net/backgroundsize.min.htc);
+  border-style:none none none none;
+  border-width:undefinedpx;
+  border-color:none;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:0px;
+  border-radius:0px;
+  width:100%;
+  height:200px;
+  position:relative;
+}
+
+.action-bar-overlay {
+  position:absolute;
+  background:rgba(6,164,235,0.7);
+  -pie-background:rgba(6,164,235,0.7);
+  behavior:url(/PIE.htc);
+  height:200px;
+  width:100%;
+}
